lab-03/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-web
  name: hello-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-web
  strategy: {}
  template:
    metadata:
      labels:
        app: hello-web
    spec:
      containers:
      - image: quay.io/tjungbau/hello-web:1.0.0
        name: hello-web
        ports:
        - containerPort: 8080
        resources: {}
status: {}
