lab-03/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-web
  name: hello-web
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-web
  type: ClusterIP
status:
  loadBalancer: {}
