lab-03/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: hello-web
  name: hello-web
spec:
  port:
    targetPort: 8080
  tls:
    termination: edge
  to:
    kind: ""
    name: hello-web
    weight: null
status: {}
